flux-ops/ingress/test/kustomization.yaml
apiVersion: kustomize.config.k8s.io/v1beta1
kind: Kustomization
namespace: simple-python-rest
resources:
- test.yaml
